updated bot